# lcode

./: Cargo.toml  Estrutura.md  FRD.md  PDR.md  TRD.md  test_large_file.txt
src/: lib.rs  main.rs
src/core/: editor.rs  file_handler.rs  mod.rs
src/file_explorer/: fs_tree.rs  mod.rs
src/syntax_highlighting/: highlighter.rs  mod.rs
src/terminal/: mod.rs  pty_integration.rs
src/ui/: app.rs  editor_ui.rs  mod.rs
