[package]
name = "lcode"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
ropey = "1.6.1"
memmap2 = "0.9.5"
rfd = "0.15.3"
walkdir = "2.5.0"
pollster = "0.4.0"
syntect = "5.2.0"
egui-phosphor = { version = "0.9.0", features = ["fill", "regular"] }
undo = "0.52.0"
tokio = { version = "1.45.1", features = ["full", "io-util", "rt", "macros", "rt-multi-thread", "sync"] }
async-trait = "0.1.88"
alacritty_terminal = "0.25.0"
portable-pty = { version = "0.9.0", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3.31"
bytes = "1.10.1"